--- a/src/scss/dependencies/_color-definitions.scss
+++ b/src/scss/dependencies/_color-definitions.scss
@@ -158,6 +158,22 @@ $palette-indigo-A200: nth($palette-indigo, 12);
 $palette-indigo-A400: nth($palette-indigo, 13);
 $palette-indigo-A700: nth($palette-indigo, 14);
 
+$palette-dark-blue:
+rgb(227, 242, 253)
+rgb(187, 222, 251)
+rgb(144, 202, 249)
+rgb(100, 181, 246)
+rgb(66, 165, 245)
+rgb(57, 118, 210)
+rgb(30, 136, 229)
+rgb(25, 118, 210)
+rgb(21, 101, 192)
+rgb(13, 71, 161)
+rgb(130, 177, 255)
+rgb(68, 138, 255)
+rgb(41, 121, 255)
+rgb(41, 98, 255);
+
 $palette-blue:
 rgb(227, 242, 253)
 rgb(187, 222, 251)
