--- a/src/scss/component.scss
+++ b/src/scss/component.scss
@@ -157,7 +157,7 @@
         padding: 8px 16px;
         cursor: pointer;
         display: inline;
-        background: rgba(0,0,0,0.06);
+        background-color: rgba(0,0,0,0.06);
         border-radius: 16px;
         margin: 0 8px 8px 0;
       }
@@ -165,6 +165,11 @@
       .mddtp-picker__range--selected {
         background-color: rgba(25,118,210,0.24);
         color: #1976D2;
+      }
+      .mddtp-picker__range--disabled, .mddtp-picker__range--disabled:hover {
+        background-color: rgba(0,0,0,0.04);
+        color: rgba(0, 0, 0, 0.54);
+        cursor: auto;
       }
     }
   }
